# rabbitmq_python_examples

./: .gitignore  .pre-commit-config.yaml  README.md  consumer.py  direct.py  dlq_example.py  exchange.py  fanout.py  main.py  pyproject.toml
