[project]
name = "rabbitmq_examples"
version = "0.1.0"
description = "Examples of using Rabbit MQ with Python"
authors = [
    {name = "Amit Prafulla"}
]
package-mode = false
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
